[package]
name = "ssh_host"
version = "1.0.0"
authors = ["Zacharie Corniere <zcorniere@gmail.com>"]
edition = "2018"
description = "`ssh_host` is a simple crate holding the nessecary value to connect to a `ssh2` host."
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whoami = "^0.6.0"
